--- a/app.css
+++ b/app.css
@@ -46,7 +46,7 @@ main {
   
 }
 
-footer {
+ {
   padding-top: 20px;
   padding-bottom: 20px;
   text-align: center;
@@ -76,11 +76,3 @@ li {
   
 }
 
-time {
-  font-weight: bold;
-}
-
-#image-label {
-  text-align: center;
-  font-size: 15px;
-}
